
ChangeLog
 [ + added, - removed, * changed ]

 * 14Oct2011 Updating PACX instrumentation
 * 13Oct2011 Several OpenMP bugfixes. Added instrumentation for set/get num
             threads. Fixed hwc counts at openmp when counter set changes.
             Fixed timing routines when using multiple threads.
 * 08Sep2011 Several OpenMP bugfixes
 * 26Aug2011 Modified code to support virtual_thread (from nanos) to view
             nanos tasks as threads in paraver.
 * 23Aug2011 Updated examples and added DynInst examples to the user-guide.
 * 23Aug2011 Fixed LINUX/{SEQ,OMP} examples to use either DynInst or static
             instrumentation.
 * 23Aug2011 Fixed emitting HWC when HWC_CHANGE_EV also occurs. HWC values
             are 0 for the new set and also the HWC counters are not emitted
             at the same timestamp.
 * 23Aug2011 Added example for CUDA instrumentation
 * 01Aug2011 Added instrumentation of MPI_Get and MPI_Put
 * 29Jun2011 Modified SVN propset using
              svn propset svn:keywords "Date Revision Author HeadURL Id"

   * (29/Jun/2011) Added extrae_version.h to track in extrae_user_events.h the
                   current version of the instrumentation package
   * (23/Jun/2011) mpi_ping examples now accept > 2 processes 
   * (20/Jun/2011) Optimized initialization of mpimpi2prv when loading a large
                   number of files using a large number of processes.
   * (10/Jun/2011) Improved CUDA support
   * (07/Jun/2011) BG/P fails to execute PAPI_read in PAPI_read when using time
                   sampling (fixed by additional logic & avoiding read inside).
   * (07/Jun/2011) --sort-addresses is enabled by default
   * (07/Jun/2011) Fixed emitting flush events in between multiple events
                   through routines Backend_Enter_Instrumentation and
                   Backend_Leave_Instrumentation. This should avoid most
                   Skipping state with negative duration messages at mpi2prv.