@@ -101,7 +101,7 @@ unsigned IsPACX (unsigned EvType)
 
 #define MISC_EVENTS 26
 static unsigned misc_events[] = {FLUSH_EV, READ_EV, WRITE_EV, APPL_EV, USER_EV,
-  HWC_DEF_EV, HWC_CHANGE_EV, HWC_EV, TRACING_EV, SET_TRACE_EV, CALLER_EV,
+	HWC_DEF_EV, HWC_CHANGE_EV, HWC_EV, TRACING_EV, SET_TRACE_EV, CALLER_EV,
 	CPU_BURST_EV, RUSAGE_EV, MEMUSAGE_EV, MPI_STATS_EV, USRFUNC_EV, SAMPLING_EV,
 	HWC_SET_OVERFLOW_EV, TRACING_MODE_EV, MRNET_EV, CLUSTER_ID_EV, SPECTRAL_PERIOD_EV,
 	USER_SEND_EV, USER_RECV_EV, RESUME_VIRTUAL_THREAD_EV, SUSPEND_VIRTUAL_THREAD_EV };
@@ -126,7 +126,7 @@ unsigned IsMISC (unsigned EvType)
 
 #define OMP_EVENTS 10
 static unsigned omp_events[] = { OMPFUNC_EV, PAR_EV, WSH_EV, BARRIEROMP_EV,
-  UNNAMEDCRIT_EV, NAMEDCRIT_EV, WORK_EV, JOIN_EV, OMPSETNUMTHREADS_EV,
+	UNNAMEDCRIT_EV, NAMEDCRIT_EV, WORK_EV, JOIN_EV, OMPSETNUMTHREADS_EV,
 	OMPGETNUMTHREADS_EV};
 
 /******************************************************************************
@@ -145,7 +145,7 @@ unsigned IsOpenMP (unsigned EvType)
 
 #define PTHREAD_EVENTS 12
 static unsigned pthread_events[] = { PTHREADCREATE_EV, PTHREADJOIN_EV,
-  PTHREADDETACH_EV, PTHREADFUNC_EV, PTHREAD_RWLOCK_WR_EV, PTHREAD_RWLOCK_RD_EV,
+	PTHREADDETACH_EV, PTHREADFUNC_EV, PTHREAD_RWLOCK_WR_EV, PTHREAD_RWLOCK_RD_EV,
 	PTHREAD_RWLOCK_UNLOCK_EV, PTHREAD_MUTEX_LOCK_EV, PTHREAD_MUTEX_UNLOCK_EV,
 	PTHREAD_COND_SIGNAL_EV, PTHREAD_COND_BROADCAST_EV, PTHREAD_COND_WAIT_EV };
 
